<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavigationViewActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_grey_600_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_favorite_grey_600_24dp"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_grey_600_24dp"
            android:title="@string/contact" />

        <item
            android:title="@string/others" >

            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:visible="false"
                    android:icon="@drawable/ic_share_grey_600_24dp"
                    android:title="@string/share" />

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_grey_600_24dp"
                    android:title="@string/settings" />
            </menu>

        </item>

    </group>

</menu>
